test/corpus/struct.txt
====================
Struct Declarations
====================

struct example {
    uint256 element_a;
    int element_b;
}

---

(source_file
    (struct_declaration 
        (identifier)
        (struct_body
            (struct_member (type_name (primitive_type)) (identifier))
            (struct_member (type_name (primitive_type)) (identifier))))) 
